<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto" >
  <item
      android:icon="@drawable/ic_menu_filter_shows_list"
      android:title="@string/menu_filter_shows_list"
      app:showAsAction="ifRoom">
    <menu>
      <group
          android:checkableBehavior="single">
        <item
            android:id="@+id/menu_filter_uncompleted"
            android:title="@string/menu_filter_uncompleted"/>
        <item
            android:id="@+id/menu_filter_starred"
            android:title="@string/menu_filter_starred"/>
        <item
            android:id="@+id/menu_filter_archived"
            android:title="@string/menu_filter_archived"/>
        <item
            android:id="@+id/menu_filter_upcoming"
            android:title="@string/menu_filter_upcoming"/>
        <item
            android:id="@+id/menu_filter_all"
            android:title="@string/menu_filter_all"/>
      </group>
    </menu>
  </item>
  <item
      android:id="@+id/menu_refresh_all_shows"
      android:title="@string/menu_refresh_all_shows"
      app:showAsAction="never" />
</menu>

