<?xml version="1.0" encoding="utf-8"?>
<menu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
  <item
      android:id="@+id/menu_add_new_show"
      android:icon="@drawable/ic_menu_add_show"
      android:title="@string/menu_add_new_show"
      app:showAsAction="ifRoom|collapseActionView"
      app:actionViewClass="androidx.appcompat.widget.SearchView" />
  <item
      android:id="@+id/menu_back_up"
      android:title="@string/menu_back_up"
      app:showAsAction="never"
      android:menuCategory="secondary"/>
  <item
      android:id="@+id/menu_restore"
      android:title="@string/menu_restore"
      app:showAsAction="never"
      android:menuCategory="secondary"/>
  <item
      android:id="@+id/menu_settings"
      android:title="@string/menu_settings"
      app:showAsAction="never"
      android:menuCategory="secondary"/>
  <item
      android:id="@+id/menu_about"
      android:title="@string/menu_about"
      app:showAsAction="never"
      android:menuCategory="secondary" />
</menu>
